--- a/WebStreamer/template/dl.html
+++ b/WebStreamer/template/dl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://www.flaticon.com/premium-icon/icons/svg/2626/2626281.svg" itemprop="thumbnailUrl">
+    <meta property="og:image" content="https://dl7.wapkizfile.info/download/6c9c5c1c32021a15d03d660448f694af/0a2d4f0dc9c0f259281d2d68201d306e/odiaserial+aino+pk/1624477874537-(odiaserial.aino.pk).png" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%s</title>
